--- a/homepage.css
+++ b/homepage.css
@@ -378,6 +378,155 @@ nav {
     }
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 50%;
+    top: 50%;
+    margin-bottom: 20%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    max-width: 90%;
+    max-height: 90vh;
+    overflow: auto;
+  }
+  
+  .modal img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 6px;
+    object-fit: contain;
+    overflow: hidden;
+  }
+  
+  .modal-button {
+    width: 250px;
+    max-width: 100%;
+    max-height: 100%;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease-in-out;
+    overflow: hidden;
+    margin: 10px;
+  }
+  
+  .modal-button:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  }
+  
+  .modal-button img {
+    width: 100%;
+    height: auto;
+    border-radius: 6px;
+    object-fit: cover;
+  }
+  
+  .modal-buttons-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .modal-button .button-text {
+    font-size: 14px;
+    line-height: 1.5;
+  }
+  
+  .modal-button .button-text strong {
+    font-weight: bold;
+  }
+  
+  .modal-button .button-text em {
+    font-style: italic;
+    font-weight: bold;
+  }
+  
+  .modal-text {
+    font-family: 'Poppins', sans-serif;
+    margin-top: 10px;
+    text-align: center;
+  }
+  
+  .modal-text p {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+  }
+  
+  .close {
+    color: rgba(0, 0, 0, 0.6);
+    float: right;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close:hover {
+    color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+  }
+  
+  .modal-content {
+    position: relative;
+  }
+  
+  .group-status-taken {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    background-color: rgb(217, 55, 55);
+    color: white;
+    padding: 10px; 
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 10px;
+    position: relative;
+    top: 5px;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .group-status-free {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    background-color: rgb(69, 189, 79);
+    color: white;
+    padding: 10px; 
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 10px;
+    position: relative;
+    top: 5px;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+
 
 
 
