--- a/homepage.css
+++ b/homepage.css
@@ -525,8 +525,39 @@ nav {
     left: 50%;
     transform: translateX(-50%);
   }
-  
+    
+  .like-button {
+    font-family: 'Poppins', sans-serif;
+    border: 1px solid #333;
+    color: rgb(12, 12, 12);
+    padding: 10px; 
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    top: 5px;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
+  .liked-button {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    background-color: rgb(142, 142, 142);
+    color: rgb(255, 255, 255);
+    padding: 10px; 
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    top: 5px;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
 
 
