--- a/homepage.css
+++ b/homepage.css
@@ -43,6 +43,14 @@ nav {
     color: #333;
     padding: 10px 20px;
     transition: color 0.3s;
+    display: flex;
+    align-items: center;
+}
+
+.nav-btn img.nav-logo {
+    height: 30px;
+    width: 30px;
+    margin-right: 8px;
 }
 
 .nav-btn:hover {
@@ -142,8 +150,8 @@ nav {
 
 .content-full-width .subheading {
     font-size: 1.5rem;
-    font-weight: 300;
-    color: #216bff;
+    font-weight: 500;
+    color: #333;
     margin-top: 70px;
     margin-bottom: 10px;
     margin-left: 85px;
