--- a/login.css
+++ b/login.css
@@ -18,9 +18,39 @@ body {
     background: #edf8fe;
     padding: 40px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
     width: 90%;
     max-width: 400px;
+}
+
+.navbar {
+    width: 100%;
+    background-color: #fff;
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.header-logo {
+    height: 40px;
+}
+
+.back-home {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    font-weight: 500;
+}
+
+.back-home:hover {
+    color: #333;
+    text-decoration: none;
 }
 
 .login-form {
