--- a/homepage.css
+++ b/homepage.css
@@ -596,3 +596,63 @@ nav {
     left: 50%;
     transform: translateX(-50%);
 }
+
+.modal-content {
+    position: relative;
+    text-align: center;
+    padding: 20px;
+}
+
+.modal-image {
+    width: 300px;
+    height: 400px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+
+.connect-button {
+    font-family: 'Poppins', sans-serif;
+    border: 1px solid #333;
+    color: rgb(12, 12, 12);
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    top: 5px;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+}
+
+.connect-button:hover {
+    background-color: #216bff;
+    color: white;
+    border-color: #216bff;
+}
+
+.status-badge {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 10px;
+    position: relative;
+    top: 5px;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: fit-content;
+}
+
+.status-badge.free {
+    background-color: rgb(69, 189, 79);
+}
+
+.status-badge.taken {
+    background-color: rgb(217, 55, 55);
+}
