--- a/homepage.css
+++ b/homepage.css
@@ -285,8 +285,6 @@ nav {
     padding: 0 20px; /* Add some padding for better readability */
 }
 
-
-
 .hamburger {
     display: none;
     flex-direction: column;
@@ -705,5 +703,135 @@ nav {
 
 .status-badge.taken {
     background-color: rgb(217, 55, 55);
+}
+
+.main-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.left-content {
+    width: 70%;
+    margin-right: 20px;
+}
+
+.left-content.full-width {
+    width: 100%;
+    margin-right: 0;
+}
+
+.right-content {
+    width: 26%;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-right: 60px;
+    margin-top: 60px;
+}
+
+.expectations-box h2 {
+    text-align: center; /* Center the heading */
+    font-size: 1.7rem;
+    font-weight: 500;
+    color: #216bff;
+    margin-bottom: 10px;
+}
+
+.expectations-box p {
+    font-size: 1.3rem;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.expectations-box ul {
+    list-style-type: disc;
+    padding-left: 30px;
+}
+
+.expectations-box li {
+    font-size: 1.2rem;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.class-content-fullwidth {
+    width: 100%;
+}
+
+.welcome {
+    text-align: left;
+}
+
+.welcome h1 {
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: #216bff;
+    font-size: 4rem;
+    font-weight: 400;
+    line-height: 1.3;
+    margin-bottom: 50px;
+    animation: fadeIn 1s ease forwards;
+}
+
+.content-full-width {
+    text-align: left;
+}
+
+.content-full-width .subheading {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #333;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.content-full-width .section-divider {
+    width: 90%;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+}
+
+.class-boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 90%;
+}
+
+.class-box {
+    width: 48%;
+    height: 150px;
+    background-color: #8ba4ff;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: transform 0.3s, background-color 0.3s;
+    margin-bottom: 20px;
+}
+
+.class-box:hover {
+    background-color: #216bff;
+    transform: scale(1.05);
+}
+
+.class-content {
+    display: none;
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.class-section {
+    display: none;
 }
 
