--- a/homepage.css
+++ b/homepage.css
@@ -713,7 +713,7 @@ nav {
 }
 
 .left-content {
-    width: 70%;
+    width: 75%;
     margin-right: 20px;
 }
 
@@ -723,11 +723,11 @@ nav {
 }
 
 .right-content {
-    width: 26%;
+    width: 20%;
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     margin-right: 60px;
     margin-top: 60px;
 }
@@ -833,5 +833,78 @@ nav {
 
 .class-section {
     display: none;
+}
+
+.icon-buttons {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0;
+    position: relative;
+}
+
+.icon-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    transition: transform 0.2s;
+    margin-right: 3px; /* Add margin to space the icons */
+}
+
+.icon-button:focus {
+    outline: none;
+}
+
+.icon-button img {
+    width: 30px;
+    height: 30px;
+    transition: filter 0.3s;
+}
+
+.icon-button:hover img {
+    filter: brightness(1.2);
+}
+
+.flag-icon {
+    position: absolute;
+    right: 0;
+    margin-right: 0; /* Reset any margin for the flag icon */
+}
+
+/* Friend Added Popup */
+/* Friend Added Popup */
+.popup {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: lightblue;
+    color: black;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    width: 300px; /* Make it wider */
+    text-align: center; /* Center the text */
+    z-index: 1000;
+}
+
+/* Modal Buttons */
+.modal-button {
+    padding: 10px 20px;
+    margin: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.green-button {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.red-button {
+    background-color: #f44336;
+    color: white;
 }
 
